--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Sparshan605.github.io/Portfolio_Website",
+  "homepage": "https://Sparshan605.github.io/Portfolio_Website/",
   "name": "first-vite-project",
   "private": true,
   "version": "0.0.0",
